fixed grid gap

--- a/lesson3/styles/style.css
+++ b/lesson3/styles/style.css
@@ -113,7 +113,7 @@ footer {
     .personas {
         display: grid;
         grid-template-columns: 200px auto;
-        grid-gap: 25px;
+        grid-gap: 100px;
         align-items: center;
         margin-top: -25px;
     }
